--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,7 @@ pydantic-settings = "^2.7.1"
 fastapi = "^0.115.8"
 uvicorn = "^0.34.0"
 sqlalchemy = "^2.0.38"
+pytest = "^8.3.4"
 
 
 [build-system]
